public/assets/css/main.css
html, body
{
	height: 100%;
	font-size: 100%;
}

body
{
	/*background: url('../images/tile-hexagon.png');*/
	background-color: #eaeaea;
	color: #232323;
	font-family: 'helvetica neue', helvetica, arial, sans-serif;
}

body > header, body > footer
{
	background-color: #444347;
	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1), 0 1px 0 0 rgba(0, 0, 0, 0.1);
	color: #fff;
	width: 100%;
	z-index: 9999;
}

body > header > .head, body > footer > .foot
{
	align-items: center;
	display: flex;
	justify-content: space-between;
	min-height: 100%;
	padding: 1rem;
}

body > header > .divider
{
	background-color: #58575c;
	height: 0.75rem;
}

body > header h1
{
	font-size: 1.5rem;
}
	body > header h1 a
	{
		letter-spacing: -0.0625rem;
	}

body > header > nav
{
	height: 0;
	margin: 0 1rem;
	opacity: 0;
	overflow: hidden;
	text-align: center;
}
	body > header > nav ul
	{
		margin-bottom: 1rem;
	}
	body > header > nav a
	{
		background-color: #121212;
		display: block;
		letter-spacing: 0.125rem;
		margin-bottom: 0.5rem;
		padding: 0.75rem;
		text-transform: lowercase;
	}

body > footer
{
	background-color: #fff;
	box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1) inset, 0 1px 0 0 rgba(0, 0, 0, 0.1) inset;
	color: #232323;
	justify-content: space-around;
	min-height: 5rem;
	text-align: center;
}

body > main
{
	min-height: 100%;
	padding: 1rem;
	z-index: 1000;
}
	body > main h2
	{
		margin: 0.5rem 0;
	}

	body > main p
	{
		line-height: 1.2rem;
		margin: 0 0 0.5rem 0.5rem;
	}

h1, h2, h3, h4, h5, h6
{
	font-weight: normal;
}

h1
{
	font-size: 1.5rem;
}

h2
{
	font-size: 1.3rem;
}


#game-description
{
	width: 100%;
}

#game-preview
{
	position: relative;
	width: 100%;
}

.menu-icon
{
	height: 1.25rem;
	width: 1.4rem;
}
	.menu-icon:hover
	{
		cursor: pointer;
	}
	.menu-icon div
	{
		background-color: #fff;
		height: 0.25rem
	}
	.menu-icon div:first-child, .menu-icon div.first-child
	{
		margin-bottom: 0.25rem;
	}
	.menu-icon div:last-child, .menu-icon div.last-child
	{
		margin-top: 0.25rem;
	}

@media (max-width: 600px)
{

}

